# heicconventer

./: .gitignore  GEMINI.md  USER_MANUAL.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vite.single.config.ts  wrangler.json
scripts/: build-android.js
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: android.rs  lib.rs  main.rs
src/components/: ImageCard.tsx  SettingsPanel.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  label.tsx  progress.tsx  slider.tsx
src/hooks/: useHeicConverter.ts
src/hooks/__tests__/: useHeicConverter.test.tsx
src/lib/: exif.ts  utils.ts
src/lib/__tests__/: exif.test.ts
src/test/: setup.ts
src/types/: index.ts
src/worker/: converter.worker.ts
