[package]
name = "heic-converter"
version = "0.1.0"
description = "HEIC to JPG Converter"
authors = ["you"]
edition = "2021"

[lib]
name = "heic_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Android specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"
log = "0.4"
android_logger = "0.13"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"     # 优化体积
lto = true          # 开启链接时优化
codegen-units = 1   # 牺牲编译速度换取更好的优化
panic = "abort"     # 移除 panic 栈回溯代码
strip = true        # 自动剥离符号表
